syntax = "proto3";

option csharp_namespace = "artiso.AdsdHotel.Red.Api";

package rates;

service Rates {
  rpc GetRoomRatesByRoomType (GetRoomRatesByRoomTypeRequest) returns (GetRoomRatesByRoomTypeReply);
  rpc InputRoomRates (InputRoomRatesRequest) returns (InputRoomRatesReply);
}

// GetRoomRatesByRoomType
message GetRoomRatesByRoomTypeRequest {
  string room_type = 1;
}

message GetRoomRatesByRoomTypeReply {
  repeated RoomRate room_rates  = 1;
}

message RoomRate {
  string name = 1;
  float price = 2;
}

// GetRoomRatesByRoomType
message InputRoomRatesRequest {
  string name = 1;
}

message InputRoomRatesReply {
  string message = 1;
}